# agent-build-log

./: .gitignore  README.md
.github/workflows/: agent-eval.yml
conductor/: .env.example  .gitignore  STANDARDS.md
conductor/posts/: 00-series-intro.md  01-eval-bootstrap.md  02-harness-tool-design.md  03-prompt-engineering-observability.md  04-secrets-storage.md  05-memory-and-evals.md  05a-cicd-eval-gate.md
conductor/sprint-01-eval-bootstrap/: README.md  pyproject.toml  results.md
conductor/sprint-01-eval-bootstrap/evals/datasets/: conductor-v1.yaml
conductor/sprint-01-eval-bootstrap/src/: baseline.py  review.py  test_sprint_00.py  test_sprint_01.py
conductor/sprint-03-prompt-engineering-observability/: .env.example  README.md  pyproject.toml  results.md  results_a5_primacy_recency.json
conductor/sprint-03-prompt-engineering-observability/src/: agent.py  experiment_a5_primacy_recency.py  logger.py  prompt.py  run_viewer.py  test_sprint_03.py  tools.py
conductor/sprint-03-prompt-engineering-observability/src/logs/: 460c1882-e39a-4d9c-b29d-a1ca54ac37ee.jsonl  4d6d4c32-6514-40e6-844d-abe832f960b2.jsonl  86e1bf2d-07e8-4dc5-a705-c34f7374883c.jsonl  8f21f11c-a24f-424c-857b-0adc3e4f255e.jsonl  db976a77-751c-49bf-bc37-b4007ee64904.jsonl
conductor/sprint-04-secrets-storage/: .env.example  README.md  agent-bom.yaml  bom_validator.py  docker-compose.yml  pyproject.toml  results.md  vault_setup.sh
conductor/sprint-04-secrets-storage/screenshots/: run-viewer-credential-injection.txt  run-viewer-session-new.txt  run-viewer-session-resumed.txt
conductor/sprint-04-secrets-storage/src/: agent.py  logger.py  main.py  prompt.py  secrets.py  soul.md  state.py  tools.py
conductor/sprint-04-secrets-storage/tests/: test_sprint_04.py
conductor/sprint-05-memory-evals/: .env.example  README.md  agent-bom.yaml  docker-compose.yml  pyproject.toml  results.md
conductor/sprint-05-memory-evals/eval/: report.py
conductor/sprint-05-memory-evals/screenshots/: 01-qdrant-alice-memory-retrieved.txt  02-redis-alice-memory-retrieved.txt  03-inmemory-baseline-no-context.txt  04-judge-nondeterminism.txt  05-provider-comparison-summary.txt  06-recall-oriented-cases-results.txt
conductor/sprint-05-memory-evals/src/: main.py  prompt.py  soul.md  tools.py
conductor/sprint-05-memory-evals/tests/: test_sprint_05.py
(+34 files in other folders)
