[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conductor-sprint-03"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.34.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "hatchling",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
conductor = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pip-audit>=2.10.1",
]
